--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.admin_login_activity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,8 +20,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.admin_login_activity"></activity>
-        <activity android:name=".activity.student_login_activity"></activity>
+<!--        <activity android:name=".activity.admin_login_activity" ></activity>
+        <activity android:name=".activity.student_login_activity"></activity>-->
         <activity
             android:name=".activity.admin_activity"
             android:launchMode="singleTask"></activity>
